// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlCheckbox all options renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper="bg-red-light"
  validationError="oh no!"
>
  <fieldset>
    <ControlLegend
      aside={
        <span>
          Aside text
        </span>
      }
      id="testinput"
      optional={true}
      text="All options"
      themeLegend="color-white"
    />
    <div
      aria-invalid={true}
      data-test="testinput-input"
      id="testinput"
    >
      <label
        className="checkbox-container w-full"
        key="Option value 1"
      >
        <input
          aria-checked={true}
          autoFocus={true}
          checked={true}
          name="testinput"
          onChange={[Function]}
          role="checkbox"
          type="checkbox"
          value="Option value 1"
        />
        <div
          className="checkbox--red mr6 checkbox"
        >
          <Icon
            inline={false}
            name="check"
            passthroughProps={Object {}}
            size={18}
          />
        </div>
        <span>
          Option 1
        </span>
      </label>
      <label
        className="checkbox-container w-full"
        key="Option value 2"
      >
        <input
          aria-checked={true}
          autoFocus={true}
          checked={true}
          name="testinput"
          onChange={[Function]}
          role="checkbox"
          type="checkbox"
          value="Option value 2"
        />
        <div
          className="checkbox--red mr6 checkbox"
        >
          <Icon
            inline={false}
            name="check"
            passthroughProps={Object {}}
            size={18}
          />
        </div>
        <span>
          Option 2
        </span>
      </label>
      <label
        className="checkbox-container w-full"
        key="Option value 3"
      >
        <input
          aria-checked={false}
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          role="checkbox"
          type="checkbox"
          value="Option value 3"
        />
        <div
          className="checkbox--red mr6 checkbox"
        >
          <Icon
            inline={false}
            name="check"
            passthroughProps={Object {}}
            size={18}
          />
        </div>
        <span>
          Option 3
        </span>
      </label>
    </div>
  </fieldset>
</ControlWrapper>
`;

exports[`ControlCheckbox basic onChange gets called with input id and value 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <fieldset>
    <ControlLegend
      id="testinput"
      optional={false}
      text="Basic"
      themeLegend="txt-s txt-bold mb6"
    />
    <div
      data-test="testinput-input"
      id="testinput"
    >
      <label
        className="checkbox-container txt-s block mb6 flex"
        key="Option value 1"
      >
        <input
          aria-checked={false}
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          role="checkbox"
          type="checkbox"
          value="Option value 1"
        />
        <div
          className="mr6 inline-block checkbox--blue checkbox--s-label checkbox"
        >
          <Icon
            inline={false}
            name="check"
            passthroughProps={Object {}}
            size={18}
          />
        </div>
        Option 1
      </label>
      <label
        className="checkbox-container txt-s block mb6 flex"
        key="Option value 2"
      >
        <input
          aria-checked={false}
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          role="checkbox"
          type="checkbox"
          value="Option value 2"
        />
        <div
          className="mr6 inline-block checkbox--blue checkbox--s-label checkbox"
        >
          <Icon
            inline={false}
            name="check"
            passthroughProps={Object {}}
            size={18}
          />
        </div>
        Option 2
      </label>
    </div>
  </fieldset>
</ControlWrapper>
`;

exports[`ControlCheckbox basic renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <fieldset>
    <ControlLegend
      id="testinput"
      optional={false}
      text="Basic"
      themeLegend="txt-s txt-bold mb6"
    />
    <div
      data-test="testinput-input"
      id="testinput"
    >
      <label
        className="checkbox-container txt-s block mb6 flex"
        key="Option value 1"
      >
        <input
          aria-checked={false}
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          role="checkbox"
          type="checkbox"
          value="Option value 1"
        />
        <div
          className="mr6 inline-block checkbox--blue checkbox--s-label checkbox"
        >
          <Icon
            inline={false}
            name="check"
            passthroughProps={Object {}}
            size={18}
          />
        </div>
        Option 1
      </label>
      <label
        className="checkbox-container txt-s block mb6 flex"
        key="Option value 2"
      >
        <input
          aria-checked={false}
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          role="checkbox"
          type="checkbox"
          value="Option value 2"
        />
        <div
          className="mr6 inline-block checkbox--blue checkbox--s-label checkbox"
        >
          <Icon
            inline={false}
            name="check"
            passthroughProps={Object {}}
            size={18}
          />
        </div>
        Option 2
      </label>
    </div>
  </fieldset>
</ControlWrapper>
`;

exports[`ControlCheckbox disabled renders 1`] = `
<ControlWrapper
  id="testinput"
  themeControlWrapper=""
>
  <fieldset>
    <ControlLegend
      id="testinput"
      optional={false}
      text="Disabled"
      themeLegend="txt-s txt-bold mb6"
    />
    <div
      data-test="testinput-input"
      id="testinput"
    >
      <label
        className="checkbox-container txt-s block mb6 flex"
        key="Option value 1"
      >
        <input
          aria-checked={false}
          autoFocus={false}
          checked={false}
          name="testinput"
          onChange={[Function]}
          role="checkbox"
          type="checkbox"
          value="Option value 1"
        />
        <div
          className="mr6 inline-block checkbox--blue checkbox--s-label checkbox"
        >
          <Icon
            inline={false}
            name="check"
            passthroughProps={Object {}}
            size={18}
          />
        </div>
        Option 1
      </label>
      <label
        className="checkbox-container txt-s block mb6 flex"
        key="Option value 2"
      >
        <input
          aria-checked={false}
          autoFocus={false}
          checked={false}
          disabled={true}
          name="testinput"
          onChange={[Function]}
          role="checkbox"
          type="checkbox"
          value="Option value 2"
        />
        <div
          className="mr6 inline-block checkbox--blue checkbox--s-label checkbox"
        >
          <Icon
            inline={false}
            name="check"
            passthroughProps={Object {}}
            size={18}
          />
        </div>
        Option 2
      </label>
    </div>
  </fieldset>
</ControlWrapper>
`;
